--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,7 @@
         "bcryptjs": "^2.4.3",
         "multer": "^1.4.5-lts.1",
         "pdf-parse": "^1.1.1",
-        "@google/generative-ai": "^0.1.3",
+        "openai": "^4.20.0",
         "razorpay": "^2.9.2",
         "crypto": "^1.0.1"
     },
