--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,6 @@
     "license": "MIT",
     "dependencies": {
         "express": "^4.18.2",
-        "mongoose": "^8.0.3",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "jsonwebtoken": "^9.0.2",
@@ -25,6 +24,7 @@
         "multer": "^1.4.5-lts.1",
         "pdf-parse": "^1.1.1",
         "openai": "^4.20.0",
+        "@supabase/supabase-js": "^2.39.0",
         "razorpay": "^2.9.2",
         "crypto": "^1.0.1"
     },
