--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
         "bcryptjs": "^2.4.3",
         "multer": "^1.4.5-lts.1",
         "pdf-parse": "^1.1.1",
-        "@google/generative-ai": "^0.21.0",
+        "@huggingface/inference": "^2.6.4",
         "@supabase/supabase-js": "^2.39.0",
         "razorpay": "^2.9.2",
         "crypto": "^1.0.1"
