feat: implement email OTP authentication backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
         "openai": "^4.20.0",
         "@supabase/supabase-js": "^2.39.0",
         "razorpay": "^2.9.2",
+        "nodemailer": "^6.9.7",
         "crypto": "^1.0.1"
     },
     "devDependencies": {
