--- a/backend/package.json
+++ b/backend/package.json
@@ -16,18 +16,18 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
-        "express": "^4.18.2",
-        "cors": "^2.8.5",
-        "dotenv": "^16.3.1",
-        "jsonwebtoken": "^9.0.2",
-        "bcryptjs": "^2.4.3",
-        "multer": "^1.4.5-lts.1",
-        "pdf-parse": "^1.1.1",
-        "openai": "^4.20.0",
+        "@google/generative-ai": "^0.24.1",
         "@supabase/supabase-js": "^2.39.0",
-        "razorpay": "^2.9.2",
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "crypto": "^1.0.1",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.7",
-        "crypto": "^1.0.1"
+        "pdf-parse": "^1.1.1",
+        "razorpay": "^2.9.2"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
