feat: switch to native Supabase Auth OTP for production reliability

--- a/backend/env.example
+++ b/backend/env.example
@@ -3,6 +3,7 @@ SUPABASE_URL=https://wjiksbucqaoeysdpqnmc.supabase.co
 SUPABASE_ANON_KEY=sb_publishable_8SmhHBzsVQBhQ-Jqedq3Kw_bT1k_IMC
 JWT_SECRET=calmprep-super-secret-jwt-production-2026
 GEMINI_API_KEY=AIzaSyDvlrlEmvlGKDGKthv8tCtRdAh_khVmzRU
+RESEND_API_KEY=re_DrRSSwU5_MWxJ8yRL6J47oEsiFLmhJTvJ
 RAZORPAY_KEY_ID=rzp_test_your_key_id
 RAZORPAY_KEY_SECRET=your_razorpay_key_secret
 GMAIL_USER=your-email@gmail.com
